--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ gebco_2020_n20.0_s1.0_w68.0_e92.0.tif
 gebco_2020_n49.0_s44.0_w5.0_e11.0.tif
 June-2021.html
 May-2021.html
+data/mapping/ghsl_built.tif
