--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,187 @@ May-2021.html
 data/mapping/ghsl_built.tif
 kaggle.json
 kaggle.json
+data/z_hp/challenge-2/README.md
+data/z_hp/challenge-2/challenge2-articles/challenge2-article000.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article001.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article002.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article003.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article004.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article005.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article006.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article007.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article008.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article009.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article010.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article011.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article012.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article013.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article014.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article015.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article016.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article017.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article018.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article019.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article020.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article021.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article022.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article023.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article024.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article025.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article026.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article027.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article028.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article029.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article030.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article031.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article032.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article033.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article034.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article035.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article036.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article037.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article038.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article039.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article040.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article041.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article042.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article043.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article044.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article045.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article046.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article047.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article048.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article049.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article050.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article051.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article052.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article053.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article054.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article055.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article056.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article057.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article058.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article059.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article060.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article061.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article062.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article063.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article064.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article065.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article066.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article067.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article068.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article069.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article070.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article071.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article072.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article073.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article074.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article075.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article076.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article077.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article078.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article079.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article080.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article081.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article082.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article083.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article084.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article085.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article086.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article087.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article088.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article089.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article090.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article091.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article092.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article093.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article094.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article095.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article096.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article097.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article098.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article099.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article100.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article101.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article102.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article103.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article104.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article105.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article106.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article107.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article108.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article109.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article110.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article111.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article112.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article113.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article114.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article115.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article116.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article117.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article118.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article119.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article120.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article121.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article122.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article123.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article124.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article125.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article126.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article127.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article128.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article129.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article130.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article131.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article132.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article133.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article134.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article135.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article136.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article137.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article138.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article139.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article140.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article141.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article142.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article143.txt
+data/z_hp/challenge-2/challenge2-articles/challenge2-article144.txt
+data/z_hp/challenge-2/Challenge_2_Final.ipynb
+data/z_hp/challenge-2/models/la_eterna_topic_model-10.lda
+data/z_hp/challenge-2/models/la_eterna_topic_model-10.lda.expElogbeta.npy
+data/z_hp/challenge-2/models/la_eterna_topic_model-10.lda.id2word
+data/z_hp/challenge-2/models/la_eterna_topic_model-10.lda.state
+data/z_hp/challenge-2/models/la_eterna_topic_model-2.lda
+data/z_hp/challenge-2/models/la_eterna_topic_model-2.lda.expElogbeta.npy
+data/z_hp/challenge-2/models/la_eterna_topic_model-2.lda.id2word
+data/z_hp/challenge-2/models/la_eterna_topic_model-2.lda.state
+data/z_hp/challenge-2/models/la_eterna_topic_model-3.lda
+data/z_hp/challenge-2/models/la_eterna_topic_model-3.lda.expElogbeta.npy
+data/z_hp/challenge-2/models/la_eterna_topic_model-3.lda.id2word
+data/z_hp/challenge-2/models/la_eterna_topic_model-3.lda.state
+data/z_hp/challenge-2/models/la_eterna_topic_model-4.lda
+data/z_hp/challenge-2/models/la_eterna_topic_model-4.lda.expElogbeta.npy
+data/z_hp/challenge-2/models/la_eterna_topic_model-4.lda.id2word
+data/z_hp/challenge-2/models/la_eterna_topic_model-4.lda.state
+data/z_hp/challenge-2/models/la_eterna_topic_model-5.lda
+data/z_hp/challenge-2/models/la_eterna_topic_model-5.lda.expElogbeta.npy
+data/z_hp/challenge-2/models/la_eterna_topic_model-5.lda.id2word
+data/z_hp/challenge-2/models/la_eterna_topic_model-5.lda.state
+data/z_hp/challenge-2/models/la_eterna_topic_model-6.lda
+data/z_hp/challenge-2/models/la_eterna_topic_model-6.lda.expElogbeta.npy
+data/z_hp/challenge-2/models/la_eterna_topic_model-6.lda.id2word
+data/z_hp/challenge-2/models/la_eterna_topic_model-6.lda.state
+data/z_hp/challenge-2/models/la_eterna_topic_model-7.lda
+data/z_hp/challenge-2/models/la_eterna_topic_model-7.lda.expElogbeta.npy
+data/z_hp/challenge-2/models/la_eterna_topic_model-7.lda.id2word
+data/z_hp/challenge-2/models/la_eterna_topic_model-7.lda.state
+data/z_hp/challenge-2/models/la_eterna_topic_model-8.lda
+data/z_hp/challenge-2/models/la_eterna_topic_model-8.lda.expElogbeta.npy
+data/z_hp/challenge-2/models/la_eterna_topic_model-8.lda.id2word
+data/z_hp/challenge-2/models/la_eterna_topic_model-8.lda.state
+data/z_hp/challenge-2/models/la_eterna_topic_model-9.lda
+data/z_hp/challenge-2/models/la_eterna_topic_model-9.lda.expElogbeta.npy
+data/z_hp/challenge-2/models/la_eterna_topic_model-9.lda.id2word
+data/z_hp/challenge-2/models/la_eterna_topic_model-9.lda.state
+data/z_hp/challenge-2/requirements.txt
